<resources>
    <string name="app_name">MineSweeper</string>
    <string name="newGameString">New Game</string>
    <string name="highScoreString">High Scores</string>
    <string name="exitString">Exit</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="aboutString">About</string>
    <string name="batteryAlert">Battery is critical low!</string>
    <string name="your_time">Your Time:</string>
    <string name="write_your_name">Write your name:</string>
    <string name="congratulation_you_won">Congratulation! You won!</string>
    <string name="ok">OK</string>
    <string name="sorry_you_lost">Sorry! You lost! :(</string>
    <string name="go_back">Go back!</string>
    <string name="mines_left">Mines left:</string>
    <string name="rules">Rules:</string>
    <string name="_1_click_on_a_mine_and_you_lose">1. Click on a mine and you lose</string>
    <string name="_2_click_on_an_empty_square_and_you_keep_playing">2. Click on an empty square and you keep playing</string>
    <string name="_3_reveal_a_number_and_it_says_you_how_many_mines_lay_hidden_in_the_neighboring_squares">3. Reveal a number and it says you how many mines lay hidden in the neighboring squares</string>
    <string name="_4_reveal_all_square_and_you_win">4. Reveal all square and you win</string>
    <string name="fenyvesi_p_ter_g7cq2d">Fenyvesi Péter - G7CQ2D</string>
</resources>
